project re-structure with resoruces and base clojure tooling